feat: generate competition plan audit types (#296)
